Fixed button colour on dark mode

--- a/src/components/utils/Donations/index.module.css
+++ b/src/components/utils/Donations/index.module.css
@@ -16,12 +16,16 @@
 
 .donationButton {
   background-color: #ffc43b !important;
-  color: #222222 !important;
+  color: #222222;
   margin: auto;
   padding: 0.7rem 1rem !important;
   font-size: 18px !important;
 }
 
-/* :global(.theme-dark) .donationButton {
-  background-color: #222222 !important;
-} */
+:not(:global(.theme-dark)) .donationButton {
+  color: #222222;
+}
+
+:global(.theme-dark) .donationButton {
+  color: #ffffff;
+}
